@@ -35,14 +35,12 @@ import java.io.ByteArrayOutputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.logging.Level;
@@ -62,7 +60,6 @@ import org.netbeans.api.annotations.common.NonNull;
 import org.netbeans.api.jumpto.type.TypeBrowser;
 import org.netbeans.api.project.ui.OpenProjects;
 import org.netbeans.editor.JumpList;
-import org.netbeans.modules.jumpto.EntityComparator;
 import org.netbeans.modules.jumpto.common.AbstractModelFilter;
 import org.netbeans.modules.jumpto.common.CurrentSearch;
 import org.netbeans.modules.jumpto.common.ItemRenderer;
@@ -125,7 +122,7 @@ public class GoToTypeAction extends AbstractAction implements GoToPanel.ContentP
         putValue("PopupMenuText", NbBundle.getBundle(GoToTypeAction.class).getString("editor-popup-TXT_GoToType")); // NOI18N
         this.title = title;
         this.typeFilter = typeFilter;
-        this.implicitTypeProviders = typeProviders.length == 0 ? null : Collections.unmodifiableCollection(Arrays.asList(typeProviders));
+        this.implicitTypeProviders = typeProviders.length == 0 ? null : List.of(typeProviders);
         this.multiSelection = multiSelection;
         this.currentSearch = new CurrentSearch(() -> new AbstractModelFilter<TypeDescriptor>() {
             @Override
@@ -164,7 +161,7 @@ public class GoToTypeAction extends AbstractAction implements GoToPanel.ContentP
     }
 
     public Iterable<? extends TypeDescriptor> getSelectedTypes(final boolean visible, String initSearchText) {
-        Iterable<? extends TypeDescriptor> result = Collections.emptyList();
+        Iterable<? extends TypeDescriptor> result = List.of();
         try {
             panel = new GoToPanel(this, multiSelection);
             dialog = createDialog(panel);
@@ -257,7 +254,7 @@ public class GoToTypeAction extends AbstractAction implements GoToPanel.ContentP
             currentSearch.filter(
                     SearchType.EXACT_NAME,
                     text,
-                    Collections.singletonMap(AbstractModelFilter.OPTION_CLEAR, Boolean.TRUE));
+                    Map.of(AbstractModelFilter.OPTION_CLEAR, Boolean.TRUE));
             panel.revalidateModel();
             return false;
         }
